keycloak-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 2
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:latest
        args: ["start"]
        ports:
        - name: https
          containerPort: 443
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /realms/master
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 10
