keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  labels:
    app: keycloak
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: https
    port: 443
    targetPort: 8080
  selector:
    app: keycloak
